choreography/ChoreographyParser.py
# Generated from choreography/Choreography.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChoreographyParser ( Parser ):

    grammarFileName = "Choreography.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'move'", "'('", "'all'", "','", "')'", 
                     "'sync'", "'{'", "'}'", "'repeat'", "'set_frps'", "'wait'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTEGER", "DECIMAL", "COMMENT", "WS" ]

    RULE_choreography = 0
    RULE_command = 1
    RULE_moveCommand = 2
    RULE_syncCommand = 3
    RULE_repeatCommand = 4
    RULE_setFrpsCommand = 5
    RULE_waitCommand = 6
    RULE_motor = 7
    RULE_degree = 8
    RULE_speed = 9
    RULE_seconds = 10
    RULE_times = 11

    ruleNames =  [ "choreography", "command", "moveCommand", "syncCommand", 
                   "repeatCommand", "setFrpsCommand", "waitCommand", "motor", 
                   "degree", "speed", "seconds", "times" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    INTEGER=12
    DECIMAL=13
    COMMENT=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ChoreographyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChoreographyParser.CommandContext)
            else:
                return self.getTypedRuleContext(ChoreographyParser.CommandContext,i)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_choreography

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChoreography" ):
                return visitor.visitChoreography(self)
            else:
                return visitor.visitChildren(self)




    def choreography(self):

        localctx = ChoreographyParser.ChoreographyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_choreography)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.command()
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3650) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moveCommand(self):
            return self.getTypedRuleContext(ChoreographyParser.MoveCommandContext,0)


        def syncCommand(self):
            return self.getTypedRuleContext(ChoreographyParser.SyncCommandContext,0)


        def repeatCommand(self):
            return self.getTypedRuleContext(ChoreographyParser.RepeatCommandContext,0)


        def setFrpsCommand(self):
            return self.getTypedRuleContext(ChoreographyParser.SetFrpsCommandContext,0)


        def waitCommand(self):
            return self.getTypedRuleContext(ChoreographyParser.WaitCommandContext,0)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = ChoreographyParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.moveCommand()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.syncCommand()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.repeatCommand()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.setFrpsCommand()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 33
                self.waitCommand()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def degree(self):
            return self.getTypedRuleContext(ChoreographyParser.DegreeContext,0)


        def motor(self):
            return self.getTypedRuleContext(ChoreographyParser.MotorContext,0)


        def speed(self):
            return self.getTypedRuleContext(ChoreographyParser.SpeedContext,0)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_moveCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveCommand" ):
                return visitor.visitMoveCommand(self)
            else:
                return visitor.visitChildren(self)




    def moveCommand(self):

        localctx = ChoreographyParser.MoveCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moveCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(ChoreographyParser.T__0)
            self.state = 37
            self.match(ChoreographyParser.T__1)
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.state = 38
                self.match(ChoreographyParser.T__2)
                pass
            elif token in [12]:
                self.state = 39
                self.motor()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 42
            self.match(ChoreographyParser.T__3)
            self.state = 43
            self.degree()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 44
                self.match(ChoreographyParser.T__3)
                self.state = 45
                self.speed()


            self.state = 48
            self.match(ChoreographyParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SyncCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moveCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChoreographyParser.MoveCommandContext)
            else:
                return self.getTypedRuleContext(ChoreographyParser.MoveCommandContext,i)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_syncCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSyncCommand" ):
                return visitor.visitSyncCommand(self)
            else:
                return visitor.visitChildren(self)




    def syncCommand(self):

        localctx = ChoreographyParser.SyncCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_syncCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(ChoreographyParser.T__5)
            self.state = 51
            self.match(ChoreographyParser.T__6)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.moveCommand()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 57
            self.match(ChoreographyParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def times(self):
            return self.getTypedRuleContext(ChoreographyParser.TimesContext,0)


        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChoreographyParser.CommandContext)
            else:
                return self.getTypedRuleContext(ChoreographyParser.CommandContext,i)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_repeatCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatCommand" ):
                return visitor.visitRepeatCommand(self)
            else:
                return visitor.visitChildren(self)




    def repeatCommand(self):

        localctx = ChoreographyParser.RepeatCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_repeatCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(ChoreographyParser.T__8)
            self.state = 60
            self.times()
            self.state = 61
            self.match(ChoreographyParser.T__6)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.command()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 3650) != 0)):
                    break

            self.state = 67
            self.match(ChoreographyParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetFrpsCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def speed(self):
            return self.getTypedRuleContext(ChoreographyParser.SpeedContext,0)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_setFrpsCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetFrpsCommand" ):
                return visitor.visitSetFrpsCommand(self)
            else:
                return visitor.visitChildren(self)




    def setFrpsCommand(self):

        localctx = ChoreographyParser.SetFrpsCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_setFrpsCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ChoreographyParser.T__9)
            self.state = 70
            self.speed()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WaitCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seconds(self):
            return self.getTypedRuleContext(ChoreographyParser.SecondsContext,0)


        def getRuleIndex(self):
            return ChoreographyParser.RULE_waitCommand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWaitCommand" ):
                return visitor.visitWaitCommand(self)
            else:
                return visitor.visitChildren(self)




    def waitCommand(self):

        localctx = ChoreographyParser.WaitCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_waitCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(ChoreographyParser.T__10)
            self.state = 73
            self.match(ChoreographyParser.T__1)
            self.state = 74
            self.seconds()
            self.state = 75
            self.match(ChoreographyParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MotorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ChoreographyParser.INTEGER, 0)

        def getRuleIndex(self):
            return ChoreographyParser.RULE_motor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMotor" ):
                return visitor.visitMotor(self)
            else:
                return visitor.visitChildren(self)




    def motor(self):

        localctx = ChoreographyParser.MotorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_motor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ChoreographyParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DegreeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL(self):
            return self.getToken(ChoreographyParser.DECIMAL, 0)

        def INTEGER(self):
            return self.getToken(ChoreographyParser.INTEGER, 0)

        def getRuleIndex(self):
            return ChoreographyParser.RULE_degree

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDegree" ):
                return visitor.visitDegree(self)
            else:
                return visitor.visitChildren(self)




    def degree(self):

        localctx = ChoreographyParser.DegreeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_degree)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpeedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL(self):
            return self.getToken(ChoreographyParser.DECIMAL, 0)

        def INTEGER(self):
            return self.getToken(ChoreographyParser.INTEGER, 0)

        def getRuleIndex(self):
            return ChoreographyParser.RULE_speed

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpeed" ):
                return visitor.visitSpeed(self)
            else:
                return visitor.visitChildren(self)




    def speed(self):

        localctx = ChoreographyParser.SpeedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_speed)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not(_la==12 or _la==13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecondsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECIMAL(self):
            return self.getToken(ChoreographyParser.DECIMAL, 0)

        def getRuleIndex(self):
            return ChoreographyParser.RULE_seconds

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeconds" ):
                return visitor.visitSeconds(self)
            else:
                return visitor.visitChildren(self)




    def seconds(self):

        localctx = ChoreographyParser.SecondsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_seconds)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(ChoreographyParser.DECIMAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(ChoreographyParser.INTEGER, 0)

        def getRuleIndex(self):
            return ChoreographyParser.RULE_times

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimes" ):
                return visitor.visitTimes(self)
            else:
                return visitor.visitChildren(self)




    def times(self):

        localctx = ChoreographyParser.TimesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_times)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(ChoreographyParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





